# D-FINE-install

./: .gitignore  .gitmodules  AGENTS.md  INSTALL.md  README.md  configs.py  pyproject.toml  run_test_detection.py  train-dfine-all-variants.py  train-dfine-all-variants.sh  train-dfine-l.py  train-dfine-m.py  train-dfine-n.py  train-dfine-s.py  train-dfine-x.py  train_dfine_common.py
configs/dataset/: chicken_detection.yml
configs/dfine_chicken/: dfine_hgnetv2_l_chicken.yml  dfine_hgnetv2_m_chicken.yml  dfine_hgnetv2_n_chicken.yml  dfine_hgnetv2_s_chicken.yml  dfine_hgnetv2_x_chicken.yml
scripts/: download_dinov3.py
